# opengl-expriments

./: .gitignore  CMakeLists.txt  Dockerfile.txt  VAO.cpp  camera.cpp  default.frag  default.vert  glad.c  light_cube.frag  main.cpp  readme.md  shader.frag  shader.vert  shaderClass.cpp  texture.cpp
advanced-opengl/: framerbuffers_screen.frag  framerbuffers_screen.vert  main.cpp  readme.md  shader.frag  shader.vert
advanced-opengl/dependencies/include/model/: model.h
advanced-opengl/dependencies/include/shaders/: shaderClass.h
basics-opengl/: .gitignore  EBO.cpp  VAO.cpp  VBO.cpp  texture.cpp
basics-opengl/dependencies/include/EBO/: EBO.h
basics-opengl/dependencies/include/VBO/: VBO.h
basics-opengl/dependencies/include/glad/: glad.h
basics-opengl/dependencies/include/mesh/: mesh.h
basics-opengl/dependencies/include/texture/: texture.h
dependencies/include/VAO/: VAO.h
dependencies/include/camera/: camera.h
dependencies/include/model/: model.h
dependencies/include/shaders/: shaderClass.h
